--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,6 +46,7 @@
 @import "atejiBox";
 @import "goNextButton";
 @import "horizonScroller";
+@import "namesContainer";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
