--- a/riottags/gonext-button.jade
+++ b/riottags/gonext-button.jade
@@ -3,13 +3,15 @@ gonext-button
     input(type="hidden" ref="original_name_input" name="original_name" value="#{original_name}")
     input(type="hidden" ref="ateji_json_input" name="ateji_json"  value="")
 
-  button.goNextButton(onclick="{registerAteji}") &raquo;Go<br>Next!
+  button.goNextButton(onclick="{registerAteji}" class="{opts.center ? 'goNextButton--center' :''}") &raquo;Go<br>Next!
 
 
   script.
 
     var this_tag = this;
     this.atejiSelector  = opts.atejiSelector;
+    console.log("opts.center");
+    console.log(opts.center);
 
     registerAteji(){
       var submitKanjis = this_tag.atejiSelector.getSubmitKanjis();
