--- a/riottags/selecting-bar.jade
+++ b/riottags/selecting-bar.jade
@@ -6,23 +6,16 @@ selecting-bar
         div.horizonScroller
           table.namesContainer
             tr.namesContainer__row
-              td.namesContainer__cell
-                p.selectingKanji__original {opts.original_name} &raquo; 
-                japaname-box(ateji_selector="{opts.atejiSelector}" show_meanings="{opts.showMeanings}")
+              td.namesContainer__cell(each="{name in opts.names_selector.names}")
+                p.selectingKanji__original {name.original_name} &raquo; 
+                japaname-box(ateji_selector="{name.atejiSelector}" show_meanings="{opts.showMeanings}")
 
       div.selectingKanji__col--button
-        gonext-button(center="{false}")
+        gonext-button(center="{false}" ateji_selector="{opts.names_selector.names[0].atejiSelector}")
 
   script.
+
     this.ontop = true;
-    this.on("mount",function(){
-      /*
-      var japanameBox = riot.mount("japaname-box",{
-        atejiSelector:opts.atejiSelector,
-        showMeanings:opts.showMeanings
-      })[0];
-      */
-    });
 
     var this_tag = this;
 
