added multiple name registration

--- a/riottags/candidate-table.jade
+++ b/riottags/candidate-table.jade
@@ -21,7 +21,7 @@ candidate-table
 
   script.
     this_tag = this;
-    this.atejiSelector = opts.atejiSelector;
+    this.atejiSelector = opts.ateji_selector;
 
     this.selectedSyllables = this.atejiSelector.getSelectedSyllables();
     this.usingSyllable = this.atejiSelector.getUsingSyllable();
