--- a/scss/_atejiBox.scss
+++ b/scss/_atejiBox.scss
@@ -48,3 +48,14 @@ $kanji-font-family:serif;
   }
 }
 
+.atejiBox__original {
+  font-size:15px;
+  text-align:left;
+  font-weight:normal;
+  margin:0;
+  padding:0;
+  border:0;
+
+}
+
+
