--- a/scss/_namesContainer.scss
+++ b/scss/_namesContainer.scss
@@ -5,12 +5,30 @@ $nc:".namesContainer";
   padding:0;
   border:0;
 
+  //width:100%;
+
   text-align:center;
+
+
+  overflow-x:auto;
+  overflow-y:hidden;
+
+
+
+  white-space:nowrap;
 }
 
 #{$nc}__cell{
+
+  display:inline-block;
   margin:0;
   padding:0;
+  padding-left:1em;
   border:0;
 
+  vertical-align:top;
+  white-space:normal;
+
+  //text-align:left;
 }
+
