--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1362,10 +1362,7 @@ input[type="search"].jnSearchBox__textbox {
   .japanameTable td, .japanameTable th {
     margin: 0;
     padding: 0;
-    border-bottom: 1px solid #efefef; }
-  @media screen and (min-width: 600px) {
-    .japanameTable {
-      margin-left: -8rem; } }
+    border: 0; }
 
 .japanameTable__heading {
   width: 7rem;
@@ -1380,7 +1377,22 @@ input[type="search"].jnSearchBox__textbox {
 .japanameTable__kanjiCell {
   padding: 0;
   font-family: "ro-nikkatsu-sei-kai-std", serif;
-  font-size: 10rem; }
+  font-size: 10rem;
+  line-height: 1; }
+
+.japanameTable__meaningRow {
+  vertical-align: top; }
+
+.japanameTable__meaningCell {
+  vertical-align: top; }
+
+.japanameTable__original {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  text-transform: capitalize;
+  text-align: left;
+  font-size: 1.4rem; }
 
 .charsTable__cell {
   font-size: 20px; }
@@ -1606,6 +1618,14 @@ input[type="search"].jnSearchBox__textbox {
     font-size: 1rem;
     font-family: serif; }
 
+.atejiBox__original {
+  font-size: 15px;
+  text-align: left;
+  font-weight: normal;
+  margin: 0;
+  padding: 0;
+  border: 0; }
+
 .goNextButton {
   display: block;
   text-align: left;
@@ -1642,12 +1662,19 @@ input[type="search"].jnSearchBox__textbox {
   margin: 0 auto;
   padding: 0;
   border: 0;
-  text-align: center; }
+  text-align: center;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap; }
 
 .namesContainer__cell {
+  display: inline-block;
   margin: 0;
   padding: 0;
-  border: 0; }
+  padding-left: 1em;
+  border: 0;
+  vertical-align: top;
+  white-space: normal; }
 
 html {
   box-sizing: border-box; }
