--- a/riottags/gonext-button.jade
+++ b/riottags/gonext-button.jade
@@ -1,19 +1,32 @@
 gonext-button
   form(id="gonext-form" ref="gonext_form" method="POST" action="/names")
-    input(type="hidden" ref="original_name_input" name="original_name" value="#{original_name}")
-    input(type="hidden" ref="ateji_json_input" name="ateji_json"  value="")
+    //input(type="hidden" ref="original_name_input" name="original_name" value="#{original_name}")
+    input(type="hidden" ref="names_input" name="names"  value="")
 
   button.goNextButton(onclick="{registerAteji}" class="{opts.center ? 'goNextButton--center' :''}") &raquo;Go<br>Next!
 
   script.
     var this_tag = this;
-    this.atejiSelector  = opts.ateji_selector;
+    this.namesSelector  = opts.names_selector;
 
     registerAteji(){
-      var submitKanjis = this_tag.atejiSelector.getSubmitKanjis();
+      var names = [];
+      this_tag.namesSelector.forEach((name)=>{
+        
+        console.log("name");
+        console.log(name);
+        console.log(name.atejiSelector);
+        names.push({
+          original:name.original_name,
+          atejis:name.atejiSelector.getSubmitKanjis()
+        });
+      });
 
-      this_tag.refs["original_name_input"].value = this.atejiSelector.getOriginalName();
-      this_tag.refs["ateji_json_input"].value = JSON.stringify(submitKanjis);
 
-      this_tag.refs["gonext_form"] .submit();
+      this_tag.refs["names_input"].value = JSON.stringify(names);
+
+
+      //alert(JSON.stringify(names));
+
+      this_tag.refs["gonext_form"].submit();
     }
