--- a/riottags/selecting-bar.jade
+++ b/riottags/selecting-bar.jade
@@ -4,14 +4,14 @@ selecting-bar
       div.selectingKanji__col--box(onclick="{toggle}")
 
         div.horizonScroller
-          table.namesContainer
-            tr.namesContainer__row
-              td.namesContainer__cell(each="{name in opts.names_selector.names}")
-                p.selectingKanji__original {name.original_name} &raquo; 
-                japaname-box(ateji_selector="{name.atejiSelector}" show_meanings="{opts.showMeanings}")
+          ul.namesContainer
+            li.namesContainer__cell(each="{name in opts.names_selector}")
+              h4.atejiBox__original {name.original_name} &raquo; 
+              japaname-box(ateji_selector="{name.atejiSelector}" show_meanings="{opts.showMeanings}")
+
 
       div.selectingKanji__col--button
-        gonext-button(center="{false}" ateji_selector="{opts.names_selector.names[0].atejiSelector}")
+        gonext-button(center="{false}" names_selector="{opts.names_selector}")
 
   script.
 
