--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1480,23 +1480,29 @@ input[type="search"].jnSearchBox__textbox {
   padding: 0;
   border: 0; }
 
-.syllablesTable__headRow .syllablesTable__headCell {
+.syllablesTable__item {
+  border-radius: 5px;
+  background: white; }
+  .syllablesTable__item--using {
+    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.4); }
+
+.syllablesTable__head {
   text-align: center;
   margin: 0;
   padding: 0;
   border: 0; }
 
-.syllablesTable__kanjisRow {
-  color: #aaa; }
-  .syllablesTable__kanjisRow--using {
+.syllablesTable__kanjis {
+  color: #aaa;
+  margin: 0;
+  margin-bottom: 1em;
+  padding: 0;
+  border: 0;
+  width: 100%;
+  overflow-x: scroll;
+  text-align: center; }
+  .syllablesTable__kanjis--using {
     color: #000; }
-  .syllablesTable__kanjisRow .syllablesTable__kanjisCell {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    width: 100%;
-    overflow-x: scroll;
-    text-align: center; }
 
 .kanjisList {
   overflow: hidden;
@@ -1518,19 +1524,24 @@ input[type="search"].jnSearchBox__textbox {
   height: 1.4em;
   padding: 0;
   vertical-align: middle;
-  font-size: 80px;
+  font-family: "ro-nikkatsu-sei-kai-std";
+  font-size: 7rem;
   text-align: center;
   line-height: 1.4em;
   border-radius: 0.7em; }
 
 .kanjiCell__meanings {
+  text-align: center;
   display: none;
   font-size: 2rem;
   line-height: 1.2;
   margin-top: -1em; }
 
-.syllablesTable__kanjisRow--using .kanjiCell__meanings {
+.syllablesTable__item--using .kanjiCell__meanings {
   display: block; }
+
+.kanjiCell:hover .kanjiCell__char {
+  background: rgba(220, 220, 255, 0.4); }
 
 .kanjiCell--using {
   color: #000; }
@@ -1613,10 +1624,9 @@ input[type="search"].jnSearchBox__textbox {
   line-height: 1; }
   .atejiBox__cell.atejiBox__cell--kanji {
     font-size: 3rem;
-    font-family: serif; }
+    font-family: "ro-nikkatsu-sei-kai-std", serif; }
   .atejiBox__cell.atejiBox__cell--kana {
-    font-size: 1rem;
-    font-family: serif; }
+    font-size: 1rem; }
 
 .atejiBox__original {
   font-size: 15px;
@@ -1758,7 +1768,7 @@ div#kanji-selected-wrapper {
       display: block;
       margin-right: 2.85714%;
       width: 74.28571%;
-      font-family: serif;
+      font-family: "ro-nikkatsu-sei-kai-std", serif;
       text-align: center; }
       div#kanji-selected-wrapper div#kanji-selected-container div#kanji-selected-box:last-child {
         margin-right: 0; }
@@ -1841,7 +1851,7 @@ div#kanji-selected-container-margin {
               vertical-align: middle;
               line-height: 1.2;
               font-size: 3rem;
-              font-family: serif; }
+              font-family: "ro-nikkatsu-sei-kai-std", serif; }
             #ateji-cands table td .kana-box .ateji-cands-for-kana .ateji-cand label .kanji-detail {
               display: block;
               width: 100%;
