--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1475,6 +1475,10 @@ input[type="search"].jnSearchBox__textbox {
   margin-top: 1em; }
 
 .syllablesTable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   width: 100%;
   margin: 0;
   padding: 0;
