deleted space from name_db. fixed crafti bug. fix in candidate ui.

--- a/scss/_kanjiCell.scss
+++ b/scss/_kanjiCell.scss
@@ -33,6 +33,10 @@
 
 //例外的だが、入れ子の書き方
 .syllablesTable__item--using{
+  .kanjiCell__char{
+    color:black;
+
+  }
   .kanjiCell__meanings{
     display:block;
   }
