fixed smartphone touch event.
Don't use events like mouserover.

--- a/riottags/candidate-table.jade
+++ b/riottags/candidate-table.jade
@@ -1,7 +1,7 @@
 candidate-table
   div.syllablesTable
     div.syllablesTable__item(each="{syllable in selectedSyllables}" 
-      onmouseover="{parent.syllableSelected}" 
+      onclick="{parent.syllableSelected}" 
       ontouchstart="{parent.syllableSelected}" 
       class="{syllable == usingSyllable ? 'syllablesTable__item--using':''}")
       h3.syllablesTable__head
