--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -19,6 +19,13 @@ $topbar-height:auto;
 
 $body-side-margin:1rem;
 
+////////////// cell size /////////////
+
+$kanji-cell-font-size: 7rem;
+$kanji-cell-size: 9rem;
+
+
+
 ///////////////////////////BITTERS///////////////////////////////
 
 // Typography
