--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,6 +47,7 @@
 @import "goNextButton";
 @import "horizonScroller";
 @import "namesContainer";
+@import "syllableChanger";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
