--- a/riottags/candidate-tables.jade
+++ b/riottags/candidate-tables.jade
@@ -1,4 +1,7 @@
 candidate-tables
   virtual(each="{name in opts.names_selector}")
     h2 {name.original_name}
-    candidate-table(ateji_selector="{name.atejiSelector}")
+    candidate-table(ateji_selector="{name.atejiSelector}" syllable_changer="{parent.opts.syllable_changer}")
+
+
+
