--- a/scss/_otherSyllableCell.scss
+++ b/scss/_otherSyllableCell.scss
@@ -1,5 +1,6 @@
+$osc:".otherSyllableCell";
 
-.otherSyllableCell {
+#{$osc} {
   position:relative;
 
   box-sizing:border-box;
@@ -12,37 +13,20 @@
 
   vertical-align:top;
 
-
-
-  &__part{
-    color:black;
-    margin-bottom:2px;
-    border-bottom:1px solid;
-    &:last-child{
-      border-bottom:0;
-    }
-  }
-
-  &__board{
-    display:none;
-    position:absolute;
-      top:0;
-      left:0;
-    
-
-    width:300px;
-    height:100%;
-
-    background:rgba(240,240,240,0.95);
-    color:black;
-    border-radius:5px;
-    
-    
-    
-  }
-  &:hover{
+  &--activated{
     .otherSyllableCell__board{
       display:block;
     }
   }
+
 }
+
+#{$osc}__part{
+  color:black;
+  margin-bottom:2px;
+  border-bottom:1px solid;
+  &:last-child{
+    border-bottom:0;
+  }
+}
+
