added sns image

--- a/views/names/name.jade
+++ b/views/names/name.jade
@@ -5,10 +5,10 @@ block append variables
 
   - tweet = 'Got a japaname"'+ japaname.string +'" from my name "'+ japaname.original+'" on ';
   - hashtag = "japaname";
-  - share_url = "http://" + "japaname.jp" +"/" + japaname.code;
+  - share_url = "https://" + "japana.me" +"/" + japaname.code;
   - description = tweet + " " +  share_url + " #" + hashtag;
   - body_id= "bg-selected";
-  - og_image = ""; //!!!!open graph image is required
+  //- og_image = ""; //!!!!open graph image is required
 
 block append head-end
   //link(rel='stylesheet', href='/stylesheets/webfont.css') 
