--- a/views/template/struct.jade
+++ b/views/template/struct.jade
@@ -23,7 +23,7 @@ html
     meta(property="og:title" content="#{title}")
     meta(property="og:description" content="#{description}")
     meta(property="og:url" content="#{originalUrl}") 
-    meta(property="og:image" content="#{ og_image || 'http://www.ateji.jp/images/logo_fude.png'}")
+    meta(property="og:image" content="#{ og_image || 'https://japana.me/japaname_logo_1024_square.png")
     meta(property="og:site_name" content="#{title}")
     meta(property="og:email" content="")
 
