--- a/views/template/structnew.jade
+++ b/views/template/structnew.jade
@@ -22,10 +22,10 @@ html
     meta(property="og:type" content="#{originalPath == '/' ? 'website' : 'article'}")
     meta(property="og:title" content="#{title_tag}")
     meta(property="og:description" content="#{description}")
-    meta(property="og:url" content="#{originalUrl}") 
-    meta(property="og:image" content="#{ og_image || 'http://www.ateji.jp/images/logo_fude.png'}")
+    meta(property="og:url" content="#{url}") 
+    meta(property="og:image" content="#{ og_image || 'https://japana.me/images/japaname_logo_1024_square.png'}")
     meta(property="og:site_name" content="#{title_tag}")
-    meta(property="og:email" content="")
+    //meta(property="og:email" content="")
     link(rel="alternate" href="https://#{host}/" hreflang="en")
 
     link(rel='stylesheet', href='/stylesheets/main.css') 
