--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -4,6 +4,7 @@ $ateji-light-oudo-color: #D9B881;
 $ateji-shu-color : #d4371c;
 $ateji-shu-color : #d4371c;
 $ateji-lightgray-color : #efefef;
+$ateji-hada-color: #fff2cc;
 
 $topbar-color: #b28f44;
 
