--- a/scss/_syllableChanger.scss
+++ b/scss/_syllableChanger.scss
@@ -1,18 +1,22 @@
 $sc:".syllableChanger";
 
 #{$sc}{
+  $width:300px;
   position:absolute;
-    top:00px;
-    left:0;
-  
-  padding:5px;
+    top:50%;
+    left:50%;
+    z-index:201;
 
-  width:300px;
+  margin-left:-$width/2;
+  margin-top:-100px;
+
+  padding:5px;
+  width:$width;
 
   background:rgba(240,240,240,0.95);
   color:black;
   border-radius:5px;
-  
+
 }
 
 #{$sc}__buttonsContainer{
@@ -32,5 +36,33 @@ $sc:".syllableChanger";
   padding-left:0;
   padding-right:0;
   @include span-columns(1 of 3);
+}
+
+body{
+  position:relative;
+}
+
+#{$sc}__cover{
+  position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    z-index:200;
+  display:none;
+  background:black;
+  opacity:0.0;
+
+
+  transition-property:opacity;
+  transition-duration:1s;
+  &--visible{
+    display:block;
+
+    transition-property:opacity;
+    transition-duration:1s;
+    opacity:0.7;
+
+  }
 }
 
