--- a/riottags/candidate-table.jade
+++ b/riottags/candidate-table.jade
@@ -5,7 +5,7 @@ candidate-table
       ontouchstart="{parent.syllableSelected}" 
       class="{syllable == usingSyllable ? 'syllablesTable__item--using':''}")
       h3.syllablesTable__head
-        | {syllable.romaji} - {syllable.kana}
+        | {syllable.romaji}
       div.syllablesTable__kanjis
         table.kanjisList
           tr.kanjisList__row
