--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,6 +48,7 @@
 @import "horizonScroller";
 @import "namesContainer";
 @import "syllableChanger";
+@import "kanjiDetail";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
