--- a/views/names/candidate.jade
+++ b/views/names/candidate.jade
@@ -36,6 +36,7 @@ block append body-end-scripts
   script(src="/riotjs/selecting-bar.js")
   script(src="/riotjs/gonext-button.js")
   script(src="/riotjs/syllable-changer.js")
+  script(src="/riotjs/kanji-detail.js")
   script(src="/javascripts/AtejiSelector.js")
   script(src="/javascripts/NamesSelector.js")
 
