improved kanji-detail

--- a/riottags/candidate-table.jade
+++ b/riottags/candidate-table.jade
@@ -20,14 +20,13 @@ candidate-table
                 onclick="{parent.parent.kanjiSelected}")
                 div.kanjiCell__char {kanji.kanji}
                 div.kanjiCell__meanings {kanji.meanings.join("\n")}
-      div.syllablesTable__kanjiDetail(if="{syllable == usingSyllable}")
+      div.syllablesTable__kanjiDetail(class="{syllable == usingSyllable ? 'syllablesTable__kanjiDetail--display':''}")
         kanji-detail(ateji_selector="{atejiSelector}" current_syllable="{syllable}")
 
   script.
     var this_tag = this;
     this.atejiSelector = opts.ateji_selector;
     this.syllableChanger = opts.syllable_changer;
-
 
     this.selectedSyllables = this.atejiSelector.getSelectedSyllables();
     this.usingSyllable = this.atejiSelector.getUsingSyllable();
