--- a/scss/_kanjiDetail.scss
+++ b/scss/_kanjiDetail.scss
@@ -75,6 +75,7 @@ $kanji-detail-inner-padding:30px;
 
 #{$kd}__bigKanji {
   font-size:$big-kanji-size;
+  font-family: "ro-nikkatsu-sei-kai-std";
   line-height:1;
 }
 
