--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1522,6 +1522,15 @@ input[type="search"].jnSearchBox__textbox {
   .syllablesTable__kanjis--using {
     color: #000; }
 
+.syllablesTable__kanjiDetail {
+  max-height: 0px;
+  transition-property: max-height;
+  transition-duration: 0.3s; }
+  .syllablesTable__kanjiDetail--display {
+    max-height: 300px;
+    transition-property: max-height;
+    transition-duration: 0.3s; }
+
 .kanjisList {
   margin: 0 auto;
   padding: 0;
@@ -1860,6 +1869,7 @@ body {
 
 .kanjiDetail__bigKanji {
   font-size: 200px;
+  font-family: "ro-nikkatsu-sei-kai-std";
   line-height: 1; }
 
 .kanjiDetail__bigKanjiInner {
