--- a/riottags/kanji-detail.jade
+++ b/riottags/kanji-detail.jade
@@ -10,13 +10,18 @@ kanji-detail
         div.kanjiDetail__meaning {meaning} 
       div.kanjiDetail__rightColumn
 
-
   script.
     this.atejiSelector = opts.ateji_selector;
     this.currentSyllable = opts.current_syllable;
     this.favoriteKanjis = opts.favoriteKanjis;
 
+    this.kanji = this.atejiSelector.getCurrentKanjiInSyllable(this.currentSyllable)
+
     var this_tag = this;
+
+    this.atejiSelector.on("kanjichanged",function(){
+      this_tag.update();
+    });
 
     this.on("update",function(){
       this.kanji = this.atejiSelector.getCurrentKanjiInSyllable(this.currentSyllable)
@@ -30,8 +35,6 @@ kanji-detail
       else{
         this.opened = false;
       }
-
-
     });
 
     var this_tag = this;
