--- a/scss/_syllablesTable.scss
+++ b/scss/_syllablesTable.scss
@@ -61,3 +61,20 @@
   }
 }
 
+.syllablesTable__kanjiDetail{
+  max-height:0px;
+  transition-property:max-height;
+  transition-duration:0.3s;
+
+  &--display{
+    max-height:300px;
+    transition-property:max-height;
+    transition-duration:0.3s;
+  }
+}
+
+
+
+
+
+
